openshift/02-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: CI_PROJECT_NAME
  namespace: KUBE_NAMESPACE
  labels:
    app: CI_PROJECT_NAME
    app.gitlab.com/env: CI_ENVIRONMENT_SLUG
    app.gitlab.com/app: CI_PROJECT_PATH_SLUG
  annotations:
    app.gitlab.com/app: CI_PROJECT_PATH_SLUG
    app.gitlab.com/env: CI_ENVIRONMENT_SLUG
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    run: CI_PROJECT_NAME
  type: ClusterIP
  sessionAffinity: None
status:
  loadBalancer: {}
